--- a/backend/package.json
+++ b/backend/package.json
@@ -8,12 +8,14 @@
         "dev": "nodemon server.js"
     },
     "dependencies": {
+        "body-parser": "^1.19.0",
+        "config": "^3.3.12",
+        "cors": "^2.8.5",
+        "dotenv": "^16.0.3",
         "express": "^4.18.2",
         "mongoose": "^6.9.0",
-        "body-parser": "^1.19.0",
-        "dotenv": "^16.0.3",
-        "cors": "^2.8.5",
-        "morgan": "^1.10.0"
+        "morgan": "^1.10.0",
+        "pg": "^8.12.0"
     },
     "devDependencies": {
         "nodemon": "^2.0.20"
